--- a/blocks/element/__info/element__info.css
+++ b/blocks/element/__info/element__info.css
@@ -3,5 +3,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     padding: 20px 19px 31px 21px;
 }
