--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,14 +1,21 @@
 .popup__container {
-    padding: 34px 36px 37px;
-    background: #FFF;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 10px;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    font-family: 'Inter';
+    font-style: normal;
+    margin: 195px 17.5%;
+    width: 430px;
+    height: 330px;
+    background: #FFF;
+    border-radius: 10px;
 }
 
 @media screen and (max-width: 768px) {
     .popup__container {
-        padding: 25px 22px;
+        margin: 123px 19px 0;
+        width: 282px;
+        height: 322px;
     }
 }
