--- a/blocks/popup/__save-bttn/popup__save-bttn.css
+++ b/blocks/popup/__save-bttn/popup__save-bttn.css
@@ -1,5 +1,4 @@
 .popup__save-bttn {
-    justify-self: center;
     width: 358px;
     height: 50px;
     background: #000;
@@ -11,6 +10,8 @@
     line-height: 22px;
     text-align: center;
     color: #FFF;
+    cursor: pointer;
+    margin-top: 5px;
 }
 
 @media screen and (max-width: 768px) {
@@ -19,10 +20,11 @@
     height: 46px;
     font-size: 14px;
     line-height: 17px;
+    margin-top: 0;
 }
 }
 
-.popup__save-buttn:hover {
+.popup__save-bttn:hover {
     opacity: 0.8;
     transition: opacity 0.5s linear;
 }
