--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,22 +1,10 @@
 .popup {
   display: none;
-  font-family: 'Inter';
-  font-style: normal;
-  padding: 195px 425px 0;
   position: fixed;
-  top:0;
-  left:0;
-  right: 0;
-  bottom: 0;
-  width: 430px;
-  height: 330px;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
   z-index: 2;
-}
-
-@media screen and (max-width: 768px) {
-    .popup {
-    padding: 123px 19px 0;
-    width: 282px;
-    height: 322px;
-}
+  background: rgba(0, 0, 0, 0.5);
+  max-width: 880px;
 }
