--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -10,7 +10,7 @@
     left: 662px;
     top: 196px;
     border: 1px solid #FFF;
-    
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
