--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -19,6 +19,7 @@
         box-sizing: border-box;
         background-size: 16px;
         align-self: center;
+        margin-top: 12px;
     }
 }
 
