--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,6 +1,6 @@
 .element {
-    width: 282px;
-    height: 362px;
+    max-width: 282px;
+    max-height: 362px;
     background-color: #FFF;
     border-radius: 10px;
  }
