--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,9 +1,12 @@
 .elements {
+    list-style: none;
     display: grid;
     grid-template-columns: repeat(3, max-content);
     grid-template-rows: 1fr;
     column-gap: 17px;
     row-gap: 20px;
+    padding: 0;
+    margin: 0;
 }
 
 @media screen and (max-width: 1000px) {
