--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,7 +5,7 @@
     height: 74px;
     margin: 0;
     padding-top: 45px;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 768px) {
