--- a/blocks/popup/__close-bttn/popup__close-bttn.css
+++ b/blocks/popup/__close-bttn/popup__close-bttn.css
@@ -5,7 +5,7 @@
     height: 32px;
     top: -40px;
     right: -40px;
-    background-image: url(../../../images/Close\ Icon.svg);
+    background-image: url(../../../images/close-icon.svg);
     background-size: cover;
     z-index: 2;
     cursor: pointer;
