--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,21 +1,25 @@
 .popup__container {
-    position: fixed;
+    position:relative;
     display: flex;
+    align-self: center;
     flex-direction: column;
-    align-items: center;
-    font-family: 'Inter';
+    align-items: left;
+    font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
-    margin: 195px 17.5%;
-    width: 430px;
-    height: 330px;
+    width: 358px;
     background: #FFF;
     border-radius: 10px;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    padding: 34px 36px 37px;
+    transform: translateY(-10%);
 }
 
 @media screen and (max-width: 768px) {
     .popup__container {
-        margin: 123px 19px 0;
-        width: 282px;
-        height: 322px;
+        width: calc(100% - 44px);
+        padding: 25px 22px;
+        justify-content: flex-start;        
+        transform: translateY(-16%);
+        box-sizing: border-box;
     }
 }
