--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -3,14 +3,9 @@
     font-size: 14px;
     line-height: 17px;
     border: none;
-    border-bottom: 1px solid hsl(0, 0%, 0%);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     margin: 0;
-    margin-bottom: 40px;
-    width: 358px;
-}
-
-@media screen and (max-width: 768px) {
-    .popup__input {
-        width: 238px;
-    }
+    margin-bottom: 30px;
+    width: 100%;
+    padding-bottom: 10px;
 }
