--- a/blocks/popup/__save-bttn/popup__save-bttn.css
+++ b/blocks/popup/__save-bttn/popup__save-bttn.css
@@ -1,9 +1,10 @@
 .popup__save-bttn {
-    width: 358px;
+    width: 100%;
+    padding:0;
     height: 50px;
     background: #000;
+    border: 0;
     border-radius: 2px;
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -11,12 +12,12 @@
     text-align: center;
     color: #FFF;
     cursor: pointer;
-    margin-top: 5px;
+    align-self: center;
+    margin-top: 18px;
 }
 
 @media screen and (max-width: 768px) {
-    .popup__save-bttn {
-    width: 238px;
+    .popup__save-bttn {    
     height: 46px;
     font-size: 14px;
     line-height: 17px;
