--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,6 +7,12 @@
     max-width: 318px;
 }
 
+@media screen and (max-width: 920px) {
+    .footer__copyright {
+        padding-left: 3%;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .footer__copyright {
         font-size: 14px;
