--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,9 +1,7 @@
 .popup__container {
     position:relative;
     display: flex;
-    align-self: center;
     flex-direction: column;
-    align-items: left;
     font-family: 'Inter', 'Arial', sans-serif;
     font-style: normal;
     width: 358px;
@@ -11,15 +9,15 @@
     border-radius: 10px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     padding: 34px 36px 37px;
-    transform: translateY(-10%);
+    margin: 195px 25%;
 }
 
 @media screen and (max-width: 768px) {
     .popup__container {
         width: calc(100% - 44px);
         padding: 25px 22px;
-        justify-content: flex-start;        
-        transform: translateY(-16%);
+        justify-content: flex-start;
         box-sizing: border-box;
+        margin: 123px 6%;
     }
 }
