--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -9,15 +9,17 @@
     border-radius: 10px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     padding: 34px 36px 37px;
-    margin: 195px 25%;
+    margin: 0;
+    margin-top: 195px;
+    align-self: center;
 }
 
 @media screen and (max-width: 768px) {
     .popup__container {
-        width: calc(100% - 44px);
+        width: 282px;
         padding: 25px 22px;
-        justify-content: flex-start;
         box-sizing: border-box;
-        margin: 123px 6%;
+        justify-self: center;
+        margin-top: 123px;
     }
 }
