--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,7 +1,5 @@
 .popup_opened {
+    visibility: visible;
+    opacity: 1;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    align-content: flex-start;
-    flex-wrap: wrap;
 }
