--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,10 +1,14 @@
 .popup {
-  display: none;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  align-content: flex-start;
+  flex-wrap: wrap;
   position: fixed;
   opacity: 1;
-  width: 100%;
-  height: 100%;
   z-index: 2;
-  background: rgba(0, 0, 0, 0.5);
   max-width: 880px;
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0.5s, opacity 1s linear;
 }
