--- a/blocks/popup/__save-bttn/popup__save-bttn.css
+++ b/blocks/popup/__save-bttn/popup__save-bttn.css
@@ -13,7 +13,7 @@
     color: #FFF;
     cursor: pointer;
     align-self: center;
-    margin-top: 18px;
+    margin: 0px;
 }
 
 @media screen and (max-width: 768px) {
@@ -21,7 +21,7 @@
       height: 46px;
       font-size: 14px;
       line-height: 17px;
-      margin-top: 10px;
+      margin-top: 18px;
     }
 }
 
