--- a/pages/index.css
+++ b/pages/index.css
@@ -41,3 +41,6 @@
 @import url(../blocks/popup/__close-bttn/popup__close-bttn.css);
 @import url(../blocks/popup/__save-bttn/popup__save-bttn.css);
 @import url(../blocks/popup/image-container/popup__image-container.css);
+@import url(../blocks/error/error.css);
+@import url(../blocks/popup/__input/_invalid/popup__input_invalid.css);
+@import url(../blocks/popup/__save-bttn/_disabled/popup__save-bttn_disabled.css);
