pr 6 after review1

--- a/blocks/popup/__save-bttn/_disabled/popup__save-bttn_disabled.css
+++ b/blocks/popup/__save-bttn/_disabled/popup__save-bttn_disabled.css
@@ -3,4 +3,10 @@
     border: 1px solid #000;
     color: #000;
     opacity: 0.2;
+    cursor: default;
+}
+
+.popup__save-bttn_disabled:hover {
+    opacity: 0.2;
+    transition: opacity;
 }
