--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,12 +1,13 @@
 .popup {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-  align-content: flex-start;
+  align-items: center;
   flex-wrap: wrap;
   position: fixed;
   z-index: 1;
   opacity: 0;
   visibility: hidden;
   transition: visibility 0.5s, opacity 1s linear;
+  width: 100%;
+  height: 100%;
 }
